[tool.poetry]
name = "broma"
version = "0.1.0"
description = ""
authors = ["Adewumi Isaac <ienioladewumi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.7"
channels = "^3.0.4"
django-environ = "^0.7.0"
channels-redis = "^3.3.0"
redis = "^3.5.3"
psycopg2-binary = "^2.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
